--- a/styles/style.css
+++ b/styles/style.css
@@ -1,39 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,400;1,600&display=swap');
+
+:root{
+    --cor-primaria: #000000;
+    --cor-secundaria:#f6f6f6;
+    --cor-terciaria:rgb(226, 223, 43);
+    --quarta-cor:purple;
+
+    --fonte-primaria:'Krona One', sans-serif;
+    --fonte-secundaria:'Montserrat', sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
 }
 
 body{
-    background-image:url(./assets/maxresdefault\ \(1\).jpg);
+    background-image:url("../assets/maxresdefault\ \(1\).jpg");
     background-position: center center;
     background-repeat:no-repeat;
     background-size:cover;
     box-sizing: border-box;
-    /* height: 100vh; */
-    background-color: black;
-    color:white;
+    background-color:var( --cor-primaria);
+    color:var(--cor-secundaria);
 }
+
 strong{
-    color: rgb(226, 223, 43);
+    color:var(--cor-terciaria)
 }
+
 .apresentacao{
     align-items: center;
     display: flex;
     justify-content: space-between;
    padding:5% 15%;
 }
+
 .imagem{
     width:467.71px;
     height:432px; 
     border-radius: 16px;
    
 }
+
 .Apresentacao_links{
-    font-family:'Krona One', sans-serif;
+    font-family:var(--fonte-primaria);
     font-weight:400;
     font-size: 24px;
 }
+
 .botoes{
 display: flex;
 justify-content: space-between;
@@ -42,27 +57,30 @@ align-items: center;
 gap: 32px;
 
 }
+
 .titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fonte-primaria);
 }
+
 .texto{
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     
 }
+
 .tudomenosimg{
     display: flex;
     width: 615px;
     flex-direction: column;
     gap: 40px;
 }
+
 .botao{
-    /* background-color: red; */
     display: flex;
     justify-content: center;
     gap: 16px;
-    border:2px solid  rgb(226, 223, 43);
+    border:2px solid var(--cor-secundaria);
     width: 378px;
     text-align: center;
     border-radius: 16px;
@@ -70,37 +88,47 @@ gap: 32px;
     font-size: 24px;
     padding: 21.5px 0;
     font-weight: 600;
-    font-family: 'Montserrat', sans-serif;
-    color: #f6f6f6;
+    font-family: var(--fonte-secundaria);
+    color: var(--cor-secundaria);
 }
+
 .botao:hover{
     background-color: black;
-    background-image:url(./assets/1b2f9b1c4d20dd0e2dabf03072496019.png);
+    background-image:url(../assets/1b2f9b1c4d20dd0e2dabf03072496019.png);
 }
+
 .rodape{
-    color: black;
-    background-color:purple;
+    color: var(--cor-primaria);
+    background-color:var(--quarta-cor);
     padding:24px ;
     /* position: fixed; */
     bottom: 0;
     left: 0;
     right: 0;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fonte-secundaria);
     font-size: 24px;
     font-weight: 400;
 }
+
 .cabecalho_menu_link{
-font-family:'Montserrat', sans-serif ;
+font-family:var(--fonte-secundaria) ;
 font-size: 24px;
 font-weight: 600;
+text-decoration: none;
 }
+
 .cabecalho{
     padding:2% 0% 0% 15%;
 
 }
+
 .cabecalho_menu{
     display: flex;
     gap:80px;
-    color:  rgb(226, 223, 43);;
+    color: var(--cor-terciaria)
+}
+
+.Outraimg{
+    border-radius: 16px;
 }
